clusters/vmtlw/infrastructure/apps/matrix/ingress-matrix.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    meta.helm.sh/release-name: matrix-synapse
    meta.helm.sh/release-namespace: matrix-synapse
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: matrix.vmtlw.ru
      http:
        paths:
          - backend:
              service:
                name: matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
          - backend:
              service:
                name: matrix-synapse
                port:
                  number: 8008
            path: /_synapse
            pathType: Prefix
          - backend:
              service:
                name: matrix-synapse
                port:
                  number: 8008
            path: /.well-known/matrix
            pathType: Prefix
  tls:
    - hosts:
        - matrix.vmtlw.ru
      secretName: tls-secret
